docs/apache-airflow-providers-google/14.0.0/_sources/_api/airflow/providers/google/cloud/links/kubernetes_engine/index.rst.txt
airflow.providers.google.cloud.links.kubernetes_engine
======================================================

.. py:module:: airflow.providers.google.cloud.links.kubernetes_engine


Attributes
----------

.. autoapisummary::

   airflow.providers.google.cloud.links.kubernetes_engine.KUBERNETES_BASE_LINK
   airflow.providers.google.cloud.links.kubernetes_engine.KUBERNETES_CLUSTER_LINK
   airflow.providers.google.cloud.links.kubernetes_engine.KUBERNETES_POD_LINK
   airflow.providers.google.cloud.links.kubernetes_engine.KUBERNETES_JOB_LINK
   airflow.providers.google.cloud.links.kubernetes_engine.KUBERNETES_WORKLOADS_LINK


Classes
-------

.. autoapisummary::

   airflow.providers.google.cloud.links.kubernetes_engine.KubernetesEngineClusterLink
   airflow.providers.google.cloud.links.kubernetes_engine.KubernetesEnginePodLink
   airflow.providers.google.cloud.links.kubernetes_engine.KubernetesEngineJobLink
   airflow.providers.google.cloud.links.kubernetes_engine.KubernetesEngineWorkloadsLink


Module Contents
---------------

.. py:data:: KUBERNETES_BASE_LINK
   :value: '/kubernetes'


.. py:data:: KUBERNETES_CLUSTER_LINK
   :value: '/kubernetes/clusters/details/{location}/{cluster_name}/details?project={project_id}'


.. py:data:: KUBERNETES_POD_LINK
   :value: '/kubernetes/pod/{location}/{cluster_name}/{namespace}/{pod_name}/details?project={project_id}'


.. py:data:: KUBERNETES_JOB_LINK
   :value: '/kubernetes/job/{location}/{cluster_name}/{namespace}/{job_name}/details?project={project_id}'


.. py:data:: KUBERNETES_WORKLOADS_LINK
   :value: '/kubernetes/workload/overview?project={project_id}&pageState=("savedViews":("c":%5B"gke%2F{locat...


.. py:class:: KubernetesEngineClusterLink

   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`


   Helper class for constructing Kubernetes Engine Cluster Link.


   .. py:attribute:: name
      :value: 'Kubernetes Cluster'


      Name of the link. This will be the button name on the task UI.



   .. py:attribute:: key
      :value: 'kubernetes_cluster_conf'



   .. py:attribute:: format_str
      :value: '/kubernetes/clusters/details/{location}/{cluster_name}/details?project={project_id}'



   .. py:method:: persist(context, task_instance, cluster)
      :staticmethod:



.. py:class:: KubernetesEnginePodLink

   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`


   Helper class for constructing Kubernetes Engine Pod Link.


   .. py:attribute:: name
      :value: 'Kubernetes Pod'


      Name of the link. This will be the button name on the task UI.



   .. py:attribute:: key
      :value: 'kubernetes_pod_conf'



   .. py:attribute:: format_str
      :value: '/kubernetes/pod/{location}/{cluster_name}/{namespace}/{pod_name}/details?project={project_id}'



   .. py:method:: persist(context, task_instance)
      :staticmethod:



.. py:class:: KubernetesEngineJobLink

   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`


   Helper class for constructing Kubernetes Engine Job Link.


   .. py:attribute:: name
      :value: 'Kubernetes Job'


      Name of the link. This will be the button name on the task UI.



   .. py:attribute:: key
      :value: 'kubernetes_job_conf'



   .. py:attribute:: format_str
      :value: '/kubernetes/job/{location}/{cluster_name}/{namespace}/{job_name}/details?project={project_id}'



   .. py:method:: persist(context, task_instance)
      :staticmethod:



.. py:class:: KubernetesEngineWorkloadsLink

   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`


   Helper class for constructing Kubernetes Engine Workloads Link.


   .. py:attribute:: name
      :value: 'Kubernetes Workloads'


      Name of the link. This will be the button name on the task UI.



   .. py:attribute:: key
      :value: 'kubernetes_workloads_conf'



   .. py:attribute:: format_str
      :value: '/kubernetes/workload/overview?project={project_id}&pageState=("savedViews":("c":%5B"gke%2F{locat...



   .. py:method:: persist(context, task_instance)
      :staticmethod:



